simple component downloader made

--- a/component_library/user_interface/main_window/plugin.ui
+++ b/component_library/user_interface/main_window/plugin.ui
@@ -54,6 +54,7 @@
          <property name="frameShadow">
           <enum>QFrame::Raised</enum>
          </property>
+         <layout class="QVBoxLayout" name="notificationAreaLayout"/>
         </widget>
        </item>
       </layout>
