--- a/src/interface/forms/component_form.ui
+++ b/src/interface/forms/component_form.ui
@@ -255,7 +255,7 @@
           </widget>
          </item>
          <item row="6" column="1">
-          <widget class="QComboBox" name="comboBox">
+          <widget class="QComboBox" name="licenseInput">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
