--- a/src/interface/widgets/view_widget/detail_widget/new_detailed_widget.ui
+++ b/src/interface/widgets/view_widget/detail_widget/new_detailed_widget.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>newdetailedWidget</class>
+ <widget class="QWidget" name="newdetailedWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>743</width>
-    <height>409</height>
+    <width>806</width>
+    <height>501</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QWidget" name="widget" native="true">
+    <widget class="QWidget" name="topArea" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
        <horstretch>0</horstretch>
@@ -24,14 +24,14 @@
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="backPushButton">
         <property name="text">
          <string>Back</string>
         </property>
        </widget>
       </item>
       <item>
-       <spacer name="horizontalSpacer">
+       <spacer name="Separator">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -44,10 +44,10 @@
        </spacer>
       </item>
       <item>
-       <widget class="QComboBox" name="comboBox"/>
+       <widget class="QComboBox" name="filetypeComboBox"/>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="downloadPushButton">
         <property name="text">
          <string>Download</string>
         </property>
@@ -57,10 +57,10 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget_2" native="true">
+    <widget class="QWidget" name="componentnameWidget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_5">
       <item>
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="componentLabel">
         <property name="text">
          <string>Component_Name</string>
         </property>
@@ -70,7 +70,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QScrollArea" name="scrollArea_2">
+    <widget class="QScrollArea" name="thumbnailArea">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
        <horstretch>0</horstretch>
@@ -89,13 +89,13 @@
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
-     <widget class="QWidget" name="scrollAreaWidgetContents_2">
+     <widget class="QWidget" name="thumbnailareaWidget">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>706</width>
-        <height>100</height>
+        <width>786</width>
+        <height>178</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -152,7 +152,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget_3" native="true">
+    <widget class="QWidget" name="descriptionWidget" native="true">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
        <horstretch>0</horstretch>
@@ -161,7 +161,7 @@
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="descriptionLabel">
         <property name="text">
          <string>Here is a way to improve your vocabulary. Check out the words for the day and a small quiz to work up your mind.</string>
         </property>
@@ -174,7 +174,7 @@
     <widget class="QWidget" name="widget_4" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
-       <widget class="QWidget" name="widget_5" native="true">
+       <widget class="QWidget" name="metadataWidget" native="true">
         <layout class="QGridLayout" name="gridLayout">
          <item row="0" column="1">
           <widget class="QFrame" name="frame_4">
@@ -186,7 +186,7 @@
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_4">
             <item>
-             <widget class="QLabel" name="label_7">
+             <widget class="QLabel" name="authorLabel">
               <property name="text">
                <string>Author</string>
               </property>
@@ -196,7 +196,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label_8">
+             <widget class="QLabel" name="authorValue">
               <property name="text">
                <string>TextLabel</string>
               </property>
@@ -218,7 +218,7 @@
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_6">
             <item>
-             <widget class="QLabel" name="label_11">
+             <widget class="QLabel" name="licenceLabel">
               <property name="text">
                <string>Licence</string>
               </property>
@@ -228,7 +228,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label_12">
+             <widget class="QLabel" name="licenceValue">
               <property name="text">
                <string>TextLabel</string>
               </property>
@@ -250,7 +250,7 @@
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_5">
             <item>
-             <widget class="QLabel" name="label_9">
+             <widget class="QLabel" name="maintainerLabel">
               <property name="text">
                <string>Maintainer</string>
               </property>
@@ -260,7 +260,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label_10">
+             <widget class="QLabel" name="maintainerValue">
               <property name="text">
                <string>TextLabel</string>
               </property>
@@ -282,7 +282,7 @@
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_2">
             <item>
-             <widget class="QLabel" name="label_3">
+             <widget class="QLabel" name="updatedLabel">
               <property name="text">
                <string>Updated_on </string>
               </property>
@@ -292,7 +292,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label_4">
+             <widget class="QLabel" name="updatedValue">
               <property name="text">
                <string>TextLabel</string>
               </property>
@@ -314,7 +314,7 @@
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_8">
             <item>
-             <widget class="QLabel" name="label_15">
+             <widget class="QLabel" name="ratingLabel">
               <property name="text">
                <string>Rating</string>
               </property>
@@ -324,14 +324,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label_16">
-              <property name="text">
-               <string>TextLabel</string>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
+             <widget class="starRating" name="widget" native="true"/>
             </item>
            </layout>
           </widget>
@@ -346,7 +339,7 @@
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_7">
             <item>
-             <widget class="QLabel" name="label_13">
+             <widget class="QLabel" name="createdLabel">
               <property name="text">
                <string>Created_on</string>
               </property>
@@ -356,7 +349,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QLabel" name="label_14">
+             <widget class="QLabel" name="createdValue">
               <property name="text">
                <string>TextLabel</string>
               </property>
@@ -387,7 +380,7 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>348</width>
+           <width>380</width>
            <height>138</height>
           </rect>
          </property>
@@ -399,6 +392,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>starRating</class>
+   <extends>QWidget</extends>
+   <header>starrating.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
