--- a/src/interface/widgets/view_widget/detail_widget/detailed_widget.ui
+++ b/src/interface/widgets/view_widget/detail_widget/detailed_widget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>806</width>
+    <width>824</width>
     <height>501</height>
    </rect>
   </property>
@@ -102,8 +102,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>786</width>
-        <height>189</height>
+        <width>802</width>
+        <height>199</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -366,10 +366,22 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>380</width>
-           <height>138</height>
+           <width>386</width>
+           <height>126</height>
           </rect>
          </property>
+         <layout class="QVBoxLayout" name="verticalLayout_3">
+          <item>
+           <widget class="AttributeList" name="attributeList" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </widget>
        </widget>
       </item>
@@ -381,6 +393,12 @@
  <customwidgets>
   <customwidget>
    <class>StarRating</class>
+   <extends>QWidget</extends>
+   <header location="global">src/interface/widgets</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>AttributeList</class>
    <extends>QWidget</extends>
    <header location="global">src/interface/widgets</header>
    <container>1</container>
