--- a/src/interface/widgets/view_widget/detail_widget/detailed_widget.ui
+++ b/src/interface/widgets/view_widget/detail_widget/detailed_widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>824</width>
-    <height>501</height>
+    <width>975</width>
+    <height>673</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -80,10 +80,22 @@
    <item>
     <widget class="QScrollArea" name="thumbnailArea">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>200</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>300</height>
+      </size>
      </property>
      <property name="layoutDirection">
       <enum>Qt::LeftToRight</enum>
@@ -102,12 +114,12 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>802</width>
-        <height>181</height>
+        <width>953</width>
+        <height>190</height>
        </rect>
       </property>
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -132,7 +144,14 @@
     </widget>
    </item>
    <item>
-    <widget class="TagBar" name="tagsWidget" native="true"/>
+    <widget class="TagBar" name="tagsWidget" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QWidget" name="descriptionWidget" native="true">
@@ -369,7 +388,7 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>386</width>
+           <width>461</width>
            <height>126</height>
           </rect>
          </property>
@@ -390,6 +409,22 @@
       </item>
      </layout>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Minimum</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
